Completed Bootstrap 5 course

--- a/Bootstrap_5_Fundamentals/css/custom.css
+++ b/Bootstrap_5_Fundamentals/css/custom.css
@@ -1,28 +1,15 @@
+@import "./bootstrap-override.css";
+
 body {
   padding: 3rem 0;
   background-image: url("../images/pattern.png");
   background-repeat: repeat;
 }
 
-/* .row > [class^="col"] {
-  padding-top: 1em;
-  padding-bottom: 1em;
-  background-color: rgba(182, 89, 27, 0.25);
-  border: 1px solid rgba(228, 75, 15, 0.4);
-}
-
-.row {
-  margin-top: 0.25em;
-}
-
-.sample-bgcolor {
-  background-color: rgba(182, 89, 27, 0.25);
-} */
-
 .bg-dark {
-  /* background-color: #a593c2 !important; */
+  background-color: #a593c2 !important;
   /* background-color: #5e7a66 !important;*/
-  background-color: #88318a !important;
+  /* background-color: #88318a !important; */
 }
 
 /* cards */
@@ -31,3 +18,63 @@ body {
   border-top: 0px;
 }
 
+/* CAROUSEL */
+.carousel-caption {
+  bottom: 2rem;
+  z-index: 10;
+}
+
+.carousel-item {
+  height: 40rem;
+  max-width: 100vw;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.welcome-carousel-image1 {
+  box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.3);
+  background-image: url("../images/carousel1.jpg");
+}
+.welcome-carousel-image2 {
+  box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.3);
+  background-image: url("../images/carousel2.jpg");
+}
+.welcome-carousel-image3 {
+  box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.3);
+  background-image: url("../images/carousel3.jpg");
+}
+
+/* SHOPPING CART OFFCANVAS */
+.shopping-cart-offcanvas {
+  width: 500px !important;
+}
+
+/* JUMBOTRON */
+.jumbotron-cheese-cakes {
+  background: url("../images/products/cheesecake.jpg")
+    no-repeat fixed;
+}
+.jumbotron-all-pies {
+  background: url("../images/carousel2.jpg") no-repeat fixed;
+}
+.jumbotron-fruit-pies {
+  background: url("../images/products/strawberrypie.jpg")
+    no-repeat fixed;
+}
+.jumbotron-seasonal-pies {
+  background: url("../images/products/cranberrypie.jpg")
+    no-repeat fixed;
+}
+.jumbotron-other {
+  background: url("../images/carousel3.jpg") no-repeat fixed;
+}
+.jumbotron-detail-apple-pie {
+  background: url("../images/products/applepie.jpg")
+    no-repeat fixed;
+}
+.jumbotron {
+  box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.1);
+  height: 40vh;
+  background-size: cover;
+}
